argocd-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirecthttps@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.app.sierraalpha.co.nz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.app.sierraalpha.co.nz
    secretName: argocd-app-sierraalpha-tls
